# MarcoPolo

./: .gitignore  README.md  all_attacks.py  provision_servers.py  pyproject.toml  requirements.txt  round.py  turn.py
.github/workflows/: prevent-config-changes.yml
bgp_pathfinder/config/: cmd.json  master.json
src/: all_attacks.py  round.py  turn.py
src/bgp_pathfinder/: .gitignore  pathfinder.py
src/bgp_pathfinder/engines/: vultr.py
src/bgp_pathfinder/scripts/: paths_txt_to_announcement_statement.py
src/marcopolo/: paths.py
src/marcopolo/attacks/: all_attacks.py  node.py  round.py  turn.py
src/marcopolo/bgp_pathfinder/: pathfinder.py
src/marcopolo/bgp_pathfinder/config/: master.json
src/marcopolo/bgp_pathfinder/config/vultr/: nodes.json
src/marcopolo/bgp_pathfinder/engines/: vultr.py
src/marcopolo/certbot_tools/: README.md  authenticator.sh  cleanup.sh  token  webroot_server.py
src/marcopolo/certbot_tools/logs/: letsencrypt.log.1  letsencrypt.log.2  letsencrypt.log.3  letsencrypt.log.4  letsencrypt.log.5  letsencrypt.log.6  letsencrypt.log.7  letsencrypt.log.8
src/marcopolo/certbot_tools/webroot/: test
src/marcopolo/certbot_tools/webroot/.well-known/acme-challenge/: 8QCZZ37dXLFLOR2xYA9VKc8x_ml_XbdyJpLGzIFMIAM  Sa60sYxWQ0Tey_WRQzJgCsqg16-wXwzA88d8QDO4LdY  XIafHjpEG3Itoe4uiPNcS5ERdpKghQZP1eEyLZ64CbU  (+2 more)
src/marcopolo/configure/: config.py  config.template  update_pathfinder_config.py
src/marcopolo/configure/pathfinder_config/: cmd.json
src/marcopolo/terraform/: main.tf  manage_servers.py
src/marcopolo/utils/: README.md  create_files.py  data_objects.py  loaders.py  loggers.py  logs_writer.py  results_writer.py
src/utils/: data_objects.py  loaders.py  loggers.py  node.py
tests/: test_round.py  test_turn.py
utils/: data_objects.py  loaders.py
(+3 files in other folders)
